test/asm/sym-collision.err
ERROR: sym-collision.asm(26):
    'dork' not defined
error: Assembly aborted (1 errors)!
